# teddy-os

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-iso.yml  qemu.yml
apps/disk_utility/: README.md
apps/file_explorer/: README.md
apps/terminal/: README.md
apps/updater/: README.md
assets/: README.md
assets/icons/: README.md
bios/: boot.asm  kernel.asm  stage2.asm
bootloader/: Cargo.toml  README.md
bootloader/src/: main.rs
docs/: adding-apps.md  architecture.md  building-from-scratch.md  creating-releases.md  limitations-and-roadmap.md  phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-14.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-8.md  phase-9.md  running-in-vmware.md  theming.md  updater-manifests.md
iso/: teddy-os-release.iso  teddy-os-release.iso.sha256
kernel/: Cargo.toml  README.md  build.rs  linker.ld  x86_64-teddy-kernel.json
kernel/src/: boot_config.rs  boot_info.rs  console.rs  cpu.rs  explorer.rs  file_explorer.rs  font.rs  framebuffer.rs  fs.rs  gdt.rs  graphics.rs  image_viewer.rs  input.rs  interrupts.rs  logger.rs  main.rs  memory.rs  memory_intrinsics.rs  network.rs  port.rs  runtime.rs  serial.rs  shell.rs  storage.rs  terminal.rs  timer.rs  trace.rs  vga.rs  writer.rs
libs/: README.md
libs/boot_proto/: Cargo.toml
libs/boot_proto/src/: lib.rs
scripts/: README.md  build.ps1  clean.ps1  import-image.py  inspect-iso.ps1  make-iso.ps1  release.ps1  run-vmware.ps1
shell/: README.md
userland/: README.md
